<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    android:elevation="12dp"
    tools:context="fragments.AddEnderecoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/branco">

                <Button
                    android:id="@+id/btnAddEnderecoFragment"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:layout_marginBottom="64dp"
                    android:text="@string/txtSalvarEndereco"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutComplemento"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutRua"
                    android:layout_width="360dp"
                    android:layout_height="78dp"
                    android:layout_marginTop="48dp"
                    app:helperText="@string/txtObrigatorio"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/vermelho"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16"
                    app:layout_constraintVertical_bias="0.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputRua"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/txtRua" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutNumero"
                    android:layout_width="160dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    app:helperText="@string/txtObrigatorio"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/vermelho"
                    app:layout_constraintStart_toStartOf="@+id/layoutRua"
                    app:layout_constraintTop_toBottomOf="@+id/layoutRua">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputNumero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/txtNumero"
                        android:inputType="number"
                        android:maxLength="4" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutCEP"
                    android:layout_width="160dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    app:helperText="@string/txtObrigatorio"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/vermelho"
                    app:layout_constraintEnd_toEndOf="@+id/layoutRua"
                    app:layout_constraintTop_toBottomOf="@+id/layoutRua">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCEP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/txtCEP"
                        android:inputType="number"
                        android:maxLength="8" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutBairro"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutNumero">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputBairro"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/txtBairro" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutComplemento"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutBairro">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputComplemento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/txtComplemento" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:text="@string/txtInsiraDados"
                    android:textColor="@color/roxo_escuro"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageButton
                    android:id="@+id/imgBtnFechar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/bege"
                    android:src="@drawable/icon_close"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>